--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -21,17 +21,22 @@
   <% end %>
 </ul>
 
-<h4>New Sales Activity</h4>
+<!-- only show the following if user is logged in -->
+<% if @current_user != nil %>
 
-<%= form_with :model => @activity do |form| %>
-  <%= form.hidden_field "contact_id" %>
-  <p>
-    <%= form.select "activity_type", ["call", "email", "meeting"] %>
-    with <%= @contact["first_name"] %> <%= @contact["last_name"] %>
-  </p>
-  <p>
-    <%= form.label "note" %>
-    <%= form.text_area "note" %>
-  </p>
-  <%= form.submit %>
+  <h4>New Sales Activity</h4>
+
+  <%= form_with :model => @activity do |form| %>
+    <%= form.hidden_field "contact_id" %>
+    <p>
+      <%= form.select "activity_type", ["call", "email", "meeting"] %>
+      with <%= @contact["first_name"] %> <%= @contact["last_name"] %>
+    </p>
+    <p>
+      <%= form.label "note" %>
+      <%= form.text_area "note" %>
+    </p>
+    <%= form.submit %>
+  <% end %>
+  
 <% end %>
